test/negative/internal_compiler_helper_import/Main.hx
import reflaxe.rust.RustProfile;

class Main {
	static function main():Void {
		var profile:RustProfile = Portable;
		trace(profile);
	}
}
